--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,66 @@
-/* You can add global styles to this file, and also import other style files */
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
+
+@use "~@angular/material" as mat;
+
+@import "~@angular/material/theming";
+
+@include mat.core();
+
+// My crap
+
+$bg-clr-dark: rgb(36, 41, 47);
+
+$text-clr-light: #ffffff;
+$text-clr-link: rgb(13, 107, 218);
+
+$scheme-default: $text-clr-light, $bg-clr-dark;
+
+@mixin color-scheme($text, $bg) {
+  background-color: $bg;
+  color: $text;
+}
+
+// end of my crap
+
+$angular-primary: mat.define-palette(mat.$teal-palette, 500, 100, 900);
+$angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$angular-warn: mat.define-palette(mat.$red-palette);
+
+$angular-default-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $angular-primary,
+      accent: $angular-accent,
+      warn: $angular-warn,
+    ),
+  )
+);
+
+@include mat.all-component-themes($angular-default-theme);
+
+$angular-dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $angular-primary,
+      accent: $angular-accent,
+      warn: $angular-warn,
+    ),
+  )
+);
+
+.dark {
+  @include mat.all-component-colors($angular-dark-theme);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+  @include color-scheme($scheme-default...);
+}
