--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,18 +1,6 @@
-<footer class="flex p-2 m-2">
-  <video
-    class="footer-video"
-    src="../assets/footer.mp4"
-    autoplay
-    loop
-    mute
-  ></video>
-  <div class="footer-content">
-    <div class="grid grid-cols-2 gap-2">
-      <div>
-        <h1 class="text-5xl font-bold">Solve Your Problems.</h1>
-        <h1 class="text-5xl font-bold">Contact Us</h1>
-      </div>
-      <app-contact-form></app-contact-form>
-    </div>
+<footer class="flex w-full bg-gray-700">
+  <div class="columns">
+    <div class="flex-1">column 1</div>
+    <div class="flex-1">column 2</div>
   </div>
 </footer>
