--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,68 @@
-<!-- <div class="video-overlay">
-  <div class="video-container">
-    <video class="video" autoplay loop>
-      <source src="../../assets/earth.mp4" type="video/mp4" />
-    </video>
-    <div class="video-content">
-      <h1 class="sm:text-3xl md:text-5xl">Mission Focused Technology Driven</h1>
-      <p class="max-w-xl pt-2">
-        We are experienced system, software, and hardware engineering
-        professionals with the knowledge and skills capable of designing,
-        modeling, developing, analyzing and deploying modern complex systems. We
-        focus our energy on working with our customer to deliver product and
-        service that brings mission success.
-      </p>
+<!-- <div class="container w-full h-full">
+  <video class="video" autoplay loop>
+    <source src="../../assets/earth.mp4" type="video/mp4" />
+  </video>
+  <div class="video-content">
+    <h1 class="sm:text-3xl md:text-5xl">Mission Focused Technology Driven</h1>
+    <p class="max-w-xl pt-2">
+      We are experienced system, software, and hardware engineering
+      professionals with the knowledge and skills capable of designing,
+      modeling, developing, analyzing and deploying modern complex systems. We
+      focus our energy on working with our customer to deliver product and
+      service that brings mission success.
+    </p>
+  </div>
+  <div class="flex w-full p-4 h-128">
+    <video
+      class="contact-video"
+      src="../assets/footer.mp4"
+      autoplay
+      loop
+      mute
+    ></video>
+    <div class="columns">
+      <div class="flex-1">
+        <h1 class="text-5xl font-bold">Solve Your Problems.</h1>
+        <h1 class="text-5xl font-bold">Contact Us</h1>
+      </div>
+      <div class="flex-1">
+        <app-contact-form></app-contact-form>
+      </div>
     </div>
   </div>
 </div> -->
+
+<video class="video" autoplay loop>
+  <source src="../../assets/earth.mp4" type="video/mp4" />
+</video>
+<div class="video-content">
+  <h1 class="sm:text-3xl md:text-5xl">Mission Focused Technology Driven</h1>
+  <p class="max-w-xl pt-2">
+    We are experienced system, software, and hardware engineering professionals
+    with the knowledge and skills capable of designing, modeling, developing,
+    analyzing and deploying modern complex systems. We focus our energy on
+    working with our customer to deliver product and service that brings mission
+    success.
+  </p>
+</div>
+<!-- <div class="video-container">
+</div> -->
+<!-- Contact Form -->
+<div class="flex w-full p-4 h-128">
+  <video
+    class="contact-video"
+    src="../assets/footer.mp4"
+    autoplay
+    loop
+    mute
+  ></video>
+  <div class="columns">
+    <div class="flex-1">
+      <h1 class="text-5xl font-bold">Solve Your Problems.</h1>
+      <h1 class="text-5xl font-bold">Contact Us</h1>
+    </div>
+    <div class="flex-1">
+      <app-contact-form></app-contact-form>
+    </div>
+  </div>
+</div>
