--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,18 +2,42 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
-  background-color: #fafafa;
-  color: #333;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
-  // margin: 0 auto;
+  // padding-top: 64px;
+}
+
+footer {
+  background-color: rgb(36, 41, 47);
+  padding-top: 2rem;
+  // display: flex;
+  flex-grow: none;
+}
+
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.site-social {
+  box-shadow: 3px 0px 6px rgba(140, 149, 159, 0.15);
+}
+
+#footerLogo {
+  font-size: 84px;
+  height: 84px;
+  width: 84px;
 }
