--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button class="accent" [type]="type" (click)="onClick()">
+<button (click)="onClick()">
   <ng-content></ng-content>
 </button>
