--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -15,7 +15,7 @@ select,
 textarea {
   width: 100%;
   height: 100%;
-  background-color: rgb(55 65 81);
+  background-color: rgba(55, 65, 81, 0.8);
   padding-left: 1rem;
   padding-right: 1rem;
   margin-right: 1rem;
@@ -24,6 +24,26 @@ textarea {
 
   &:focus {
     outline: none;
-    border: 3px solid white;
+    background-color: white;
+    color: black;
+  }
+}
+
+.btn-contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-radius: 1rem;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 0.25rem;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
   }
 }
