--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,11 @@
-.video-container {
-  width: 100%;
-  height: 100vh;
-}
+// .video-container {
+//   width: 100%;
+//   height: 100%;
+// }
 
 .video {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
   z-index: -1;
 }
@@ -13,13 +13,14 @@
 .video-content {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
 
   h1 {
@@ -31,13 +32,31 @@
   }
 }
 
-.video-overlay {
+// .video-overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5);
+// }
+
+.contact-video {
+  position: relative;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  border-radius: 0.5rem;
+}
+
+.columns {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  padding: 1.5rem;
+  color: white;
 }
 
 @media (min-aspect-ration: 16/9) {
